compiler/src/snapshot_tests/grammar/errors/import_errors.tapir
# Missing semicolon
import foo

# Trailing slash (parsed as incomplete path)
import foo/;

# Empty import (just semicolon)
import ;

# Lone dot (. is not valid, only .. is)
import ./foo;
